--- a/pages/1788.html
+++ b/pages/1788.html
@@ -304,19 +304,34 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><span class='deleteWikiWord'><a href='https://ncatlab.org/nlab/file/delete/somefile.pdf?only_oath=true'>Delete somefile.pdf</a></span></p>
+    <p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><mo stretchy='false'>)</mo><mo>+</mo><mo stretchy='false'>(</mo><mn>1</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>
+  x^2(2 - x^2) + (1 - x^2)^2  = 1
+
+</annotation></semantics></math></div>
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_43436ee3c4bae15fdaec32ff8cd8331f158d3e91_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 17, 2018 at 18:39:48.
+  Last revised on April 19, 2018 at 04:15:12.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1484" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1484 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1485" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1485 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
